// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers walletReducer should handle DELETE_WALLET 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers walletReducer should handle DELETE_WALLET_FAILURE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "deleteWalletError": null,
+   "deleteWalletError": "some error",
    "isDeleteDialogOpen": false,
    "isWalletsLoaded": false,
    "wallets": Array [],
  }
`;

exports[`reducers walletReducer should handle DELETE_WALLET_SUCCESS 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers walletReducer should handle PUT_WALLET 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers walletReducer should handle SET_WALLETS 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "deleteWalletError": null,
    "isDeleteDialogOpen": false,
    "isWalletsLoaded": false,
-   "wallets": Array [],
+   "wallets": Array [
+     Object {
+       "some": "data",
+     },
+   ],
  }
`;

exports[`reducers walletReducer should handle SET_WALLETS_LOADED 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "deleteWalletError": null,
    "isDeleteDialogOpen": false,
-   "isWalletsLoaded": false,
+   "isWalletsLoaded": true,
    "wallets": Array [],
  }
`;

exports[`reducers walletReducer should handle initial state 1`] = `
Object {
  "deleteWalletError": null,
  "isDeleteDialogOpen": false,
  "isWalletsLoaded": false,
  "wallets": Array [],
}
`;
